--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=datingapp.db"
+     "DefaultConnection": "Server=localhost; Database=datingapp; Uid=appusers; Pwd=password"
   },
   "Logging": {
     "LogLevel": {
